--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </header>
         <main class="mt-2">
             <!-- items found -->
-            <div class="bg-white p-2 rounded">4 items found for category Entertaniment</div>
+            <div id="items-found" class="bg-white p-2 rounded">4 items found for category Entertaniment</div>
             <!-- sort news -->
             <div class="d-flex flex-column flex-md-row justify-content-between my-4 gap-2">
                 <div class="d-flex justify-content-between align-items-center d-md-block">
@@ -76,37 +76,12 @@
                 </div>
             </div>
             <!-- show all news -->
-            <div id="all-news-in-a-category">
-                <div class="card mb-3 mx-auto news-card">
-                    <div class="row g-0 bg-white">
-                        <div class="col-sm-5 col-md-4 col-lg-3 p-1">
-                            <img src="./images/thumb.png" class="img-fluid thumbnail" alt="...">
-                        </div>
-                        <div class="col-sm-7 col-md-8 col-lg-9">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Card title</h5>
-                                <p class="card-text text-muted">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                <div class="row align-items-center">
-                                    <div class="col-6 col-md d-flex align-items-center">
-                                        <img src="./images/avatar-2.png" alt="avatar">
-                                        <div class="d-flex flex-column ms-2">
-                                            <small class="mb-0">Jane Cooper</small>
-                                            <small class="mb-0 text-muted">Jan 10, 2022</small>
-                                        </div>
-                                    </div>
-                                    <div class="col-6 text-center col-md">
-                                        <i class="fa-regular fa-eye"></i><small class="ms-2">1.5M</small>
-                                    </div>
-                                    <div class="col-12 col-md text-end mt-4 mt-md-0">
-                                        <button class="btn btn-primary read-more-btn">Read More<i
-                                                class="ms-2 fa-regular fa-circle-right"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="d-flex justify-content-center">
+                <div id="all-news-in-a-category"></div>
+                <!-- spinner while loading news -->
+                <div class="spinner d-none align-items-center" style="height: 250px">
+                    <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
+                        <span class="visually-hidden">Loading...</span>
                     </div>
                 </div>
             </div>
