--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </header>
         <main class="mt-2">
             <!-- items found -->
-            <div id="items-found" class="bg-white p-2 rounded">4 items found for category Entertaniment</div>
+            <div id="items-found" class="bg-white p-2 rounded"></div>
             <!-- sort news -->
             <div class="d-flex flex-column flex-md-row justify-content-between my-4 gap-2">
                 <div class="d-flex justify-content-between align-items-center d-md-block">
@@ -77,7 +77,9 @@
             </div>
             <!-- show all news -->
             <div class="d-flex justify-content-center">
-                <div id="all-news-in-a-category"></div>
+                <div id="all-news-in-a-category">
+                    <!-- error message or news cards will be here -->
+                </div>
                 <!-- spinner while loading news -->
                 <div class="spinner d-none align-items-center" style="height: 250px">
                     <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
